Fix fullscreen map display on mobile Chrome

--- a/src/components/map.module.css
+++ b/src/components/map.module.css
@@ -5,10 +5,15 @@
   display: flex;
   justify-content: center;
   z-index: 1;
+  pointer-events: none;
+}
+
+.mapFooter > * {
+  pointer-events: auto;
 }
 
 .map {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   margin: 0;
 }
